# conductor-core

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.agents/skills/add-model-support/: SKILL.md
.agents/skills/add-model-support/agents/: openai.yaml
.agents/skills/add-model-support/references/: repo-integration.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: check_copied_history.py  generate_midi.py  inspect_models.py  midi_loop_roundtrip.py
src/conductor_core/: __init__.py  config.py  engine.py  midi.py  models.py  music.py  paths.py  playback.py  routing.py  storage.py
src/conductor_core/providers/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
src/conductor_core/resources/: __init__.py  model_list.json
src/conductor_core/resources/prompts/: __init__.py  loop_gen.txt
src/conductor_core/resources/soundfonts/: README.md  __init__.py
tests/: conftest.py  test_audio.py  test_engine.py  test_example_scripts.py  test_gemini_api.py  test_history.py  test_import_boundary.py  test_midi_processing.py  test_objects.py  test_paths.py  test_provider_response_parsing.py  test_runs.py  test_utils.py
